# remotis-mx-contracts-rs

./: Cargo.toml  test_subscription.scen.json
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: init.scen.json  mint_nft.scen.json
src/: admin.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
