[package]
name = "mx-contracts-rs"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.44.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.44.0"

[dependencies.multiversx-sc-modules]
version = "0.44.0"