[package]
name = "mx-contracts-rs-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.mx-contracts-rs]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.44.0"
